--- a/css/styles.css
+++ b/css/styles.css
@@ -108,6 +108,24 @@ ul {
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.current {
+  color: var(--accent-color);
+}
+.current::after {
+  position: absolute;
+  bottom: -1px;
+  left: 0;
+  content: "";
+  display: inline-block;
+
+  width: 100%;
+  height: 4px;
+  background-color: var(--accent-color);
+  border-radius: 2px;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* Удалить 
 .site-nav-link::after {
   position: absolute;
   bottom: -1px;
@@ -121,7 +139,7 @@ ul {
   border-radius: 2px;
   opacity: 0;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
 .site-nav-link:hover,
 .site-nav-link:focus {
@@ -132,10 +150,6 @@ ul {
 .site-nav-link:hover::after,
 .site-nav-link:focus::after {
   opacity: 1;
-}
-
-.current {
-  color: var(--accent-color);
 }
 
 /* Contacts */
@@ -212,6 +226,64 @@ ul {
   font-size: 44px;
   line-height: 1.3;
   letter-spacing: 0.06em;
+}
+
+/* Hero Modal */
+
+.backdrop {
+  position: fixed;
+
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(1.1);
+}
+
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+
+  /* min-height: 300px;
+  min-width: 400px; */
+  height: 581px;
+  width: 528px;
+  padding: 15px;
+
+  background-color: #fff;
+
+  transform: translate(-50%, -50%) scale(1);
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.link-close {
+  position: absolute;
+  top: 0;
+  right: 0;
+
+  margin-top: 8px;
+  margin-right: 8px;
+  padding: 6px;
+}
+
+.link-close .icon {
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
 }
 
 /* Section  */
