--- a/css/styles.css
+++ b/css/styles.css
@@ -258,8 +258,6 @@ ul {
   top: 50%;
   left: 50%;
 
-  /* min-height: 300px;
-  min-width: 400px; */
   height: 581px;
   width: 528px;
   padding: 15px;
@@ -268,7 +266,8 @@ ul {
 
   transform: translate(-50%, -50%) scale(1);
 
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1),
+    scale 1250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-close {
@@ -603,11 +602,46 @@ img {
 }
 
 /* Card */
-
 .example-description {
   margin-top: 10px;
 }
 
+.card-content {
+  position: relative;
+}
+
+.examples-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  padding-top: 63px;
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-bottom: 63px;
+
+  width: 370px;
+  height: 294px;
+  background-color: rgba(33, 150, 243, 0.9);
+
+  transform: translateY(+294px);
+  opacity: 0;
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.card-content:hover .examples-overlay {
+  transform: translateY(0);
+  opacity: 1;
+}
+
+.examples-content {
+  margin: 0;
+  color: var(--primary-white-color);
+  font-size: 18px;
+  line-height: 1.5;
+}
 /* icons */
 
 .icon-header {
