--- a/css/styles.css
+++ b/css/styles.css
@@ -125,22 +125,6 @@ ul {
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* Удалить 
-.site-nav-link::after {
-  position: absolute;
-  bottom: -1px;
-  left: 0;
-  content: "";
-  display: inline-block;
-
-  width: 100%;
-  height: 4px;
-  background-color: var(--accent-color);
-  border-radius: 2px;
-  opacity: 0;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-} */
-
 .site-nav-link:hover,
 .site-nav-link:focus {
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -631,7 +615,8 @@ img {
     opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.card-content:hover .examples-overlay {
+.card-content:hover .examples-overlay,
+.examples-link:focus .examples-overlay {
   transform: translateY(0);
   opacity: 1;
 }
