--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ body {
   line-height: 1.14;
 }
 
-*/ h1,
+h1,
 h2,
 h3,
 h4,
@@ -305,13 +305,13 @@ ul {
 }
 
 .work-list {
-  display: flex;
   margin-top: 50px;
-  position: relative;
+  display: flex;
 }
 
 .work-list-title {
   margin-right: 30px;
+  position: relative;
 }
 
 .work-list-title:last-child {
@@ -334,16 +334,13 @@ img {
 .work-text {
   display: inline-block;
   position: absolute;
-  bottom: -5px;
   text-align: center;
-  margin: 0;
+  bottom: 0;
 
-  width: 370px;
+  width: 100%;
   height: 70px;
 
   padding-top: 27px;
-  padding-left: auto;
-  padding-right: auto;
   padding-bottom: 27px;
 
   font-weight: 700;
@@ -513,8 +510,6 @@ img {
 
 /* Portfolio examples */
 .example-title {
-  margin-top: 20px;
-  margin-left: 24px;
   color: var(--main-txt-color);
   font-weight: 700;
   font-size: 18px;
@@ -526,8 +521,10 @@ img {
   color: var(--secondary-txt-color);
   font-size: 16px;
   line-height: 30px;
-  margin-left: 24px;
-  padding-bottom: 20px;
+}
+
+.examples-div {
+  padding: 20px 24px;
 }
 
 /* Filter buttons */
@@ -592,6 +589,7 @@ img {
 
 .card-content {
   position: relative;
+  overflow: hidden;
 }
 
 .examples-overlay {
@@ -604,21 +602,18 @@ img {
   padding-right: 24px;
   padding-bottom: 63px;
 
-  width: 370px;
-  height: 294px;
+  width: 100%;
+  height: 100%;
   background-color: rgba(33, 150, 243, 0.9);
 
-  transform: translateY(+294px);
-  opacity: 0;
+  transform: translateY(100%);
 
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.card-content:hover .examples-overlay,
+.examples-link:hover .examples-overlay,
 .examples-link:focus .examples-overlay {
   transform: translateY(0);
-  opacity: 1;
 }
 
 .examples-content {
